<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile" />
        <item
            android:id="@+id/sensors"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/sensors" />
        <item
            android:id="@+id/file_handling"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/file_handling" />

        <item
            android:id="@+id/microphone"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/microphone" />

        <item
            android:id="@+id/places"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/places" />

        <item
            android:id="@+id/net_resource"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/net_resource" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_web_view"
            android:icon="@android:drawable/ic_menu_share"
            android:title="Браузер" />

        <item
            android:id="@+id/worker"
            android:icon="@android:drawable/ic_menu_share"
            android:title="Worker" />

        <item
            android:id="@+id/nav_data"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="О веб-индустрии" />
    </group>
</menu>