<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.lukashev_ni.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.lukashev_ni.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.lukashev_ni.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_web_view"
        android:name="ru.mirea.lukashev_ni.mireaproject.WebViewFragment"
        android:label="Браузер"
        tools:layout="@layout/fragment_web_view" />

    <fragment
        android:id="@+id/worker"
        android:name="ru.mirea.lukashev_ni.mireaproject.MyWorkerFragment"
        android:label="Worker"
        tools:layout="@layout/fragment_my_worker" />

    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.lukashev_ni.mireaproject.DataFragment"
        android:label="О web-индустрии"
        tools:layout="@layout/fragment_data" />
</navigation>